[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55.0", features = ["tcp","tls","kad","identify","request-response","cbor","tokio","dns","noise","yamux","macros","mdns","ping"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
get-size = "0.1.4"